code/tui/snapshots/fullscreen/home/help_chinese.snap
---
source: code/tui/src/app/fullscreen/home_tests.rs
expression: "text(&render(&app, 90, 24))"
---
  .                                                                             [仪 表 盘 ]  
                                                                                          
  ╭────────┌── 帮 助  ─────────────────────────────────────────────────────[✗]─┐─────────╮  
  │        │                                                                 │         │  
  │    ▄  ▄│   快 捷 键     命 令     自 定 义 命 令                                   │         │  
  │  ▗█▛██▜│                                                                 │         │  
  │  ▝▜████│  ╭────────────────────────────────────────────────────────────╮ │         │  
  │    ▝  ▘│  │ 搜 索 帮 助                                                    │ │         │  
  │        │  ╰────────────────────────────────────────────────────────────╯ │         │  
  │        │> shift+tab  ·  循 环 切 换 任 务 模 式                                  │         │  
  │        │  shift+arrowdown  ·  降 低 推 理 强 度                                │         │  
  │        │  shift+arrowup  ·  提 高 推 理 强 度                                  │         │  
  │        │  ctrl+v  ·  附 加 剪 贴 板 图 片                                       │         │  
  │        │  ctrl+c  ·  中 断 或 退 出                                           │         │  
  ╰────────│  ctrl+d  ·  中 断 或 退 出                                           │─────────╯  
           │  ctrl+o  ·  复 制 上 一 条 回 复                                       │            
           │  ctrl+z  ·  挂 起  Ash                                            │            
           │  ctrl+r  ·  搜 索 输 入 历 史 ； Enter 编 辑 匹 配 项 ， Esc 恢 复 草 稿         │            
           │  7 项  下 方                                                       │            
  ─────────└─────────────────────────────────────────────────────────────────┘──────────  
  > 构 建 任 何 内 容                                                                           
  ──────────────────────────────────────────────────────────────────────────── 自 动 模 型    
                                                                                          
  Tab/Shift+Tab 切 换   ·  / 搜 索   ·  Esc 关 闭
