code/tui/snapshots/fullscreen/home/home_after_first_character.snap
---
source: code/tui/src/app/fullscreen/home_tests.rs
expression: rendered
---
  .                                                                [Dashboard]  
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  ────────────────────────────────────────────────────────────────────────────  
  > x                                                                           
  ─────────────────────────────────────────────────────────── Automatic model   
  ⏸ Manual                                                                      
                                                     Enter send  ·  / commands
