code/tui/snapshots/fullscreen/home/home_after_shift_tab.snap
---
source: code/tui/src/app/fullscreen/home_tests.rs
expression: "text(&render(&app, 80, 24))"
---
  .                                                                [Dashboard]  
                                                                                
  ╭──────────────────────────────────────────────────────────────────────────╮  
  │                                                                          │  
  │    ▄  ▄      Ash Code v0.1.0                                             │  
  │  ▗█▛██▜█▖                                                                │  
  │  ▝▜████▛▘    Start a task below, or continue a previous session.         │  
  │    ▝  ▘                                                                  │  
  │              New worktree                                                │  
  │              Resume session                                              │  
  │              Settings                                                    │  
  │              Help and shortcuts                                          │  
  │              Quit                                                        │  
  │                                                                          │  
  ╰──────────────────────────────────────────────────────────────────────────╯  
                                                                                
                                                                                
                                                                                
                         Type a task to begin, or use Tab to choose an action.  
  ────────────────────────────────────────────────────────────────────────────  
  >                                                                             
  ─────────────────────────────────────────────────────────── Automatic model   
                                                                                
  ⏸ Manual · ← Dashboard
