code/tui/snapshots/fullscreen/home/home_narrow.snap
---
source: code/tui/src/app/fullscreen/home_tests.rs
expression: "text(&render(&app, 40, 16))"
---
  .                        [Dashboard]  
                                        
  ╭──────────────────────────────────╮  
  │                                  │  
  │  Ash Code v0.1.0                 │  
  │  Resume session                  │  
  │  Settings                        │  
  │  Help and shortcuts              │  
  │> Quit                            │  
  ╰──────────────────────────────────╯  
             Type a task · Tab actions  
  ────────────────────────────────────  
  > Build anything                      
  ─────────────────── Automatic model   
  ⏸ Manual                              
  Enter select · Esc input
