code/tui/snapshots/fullscreen/home/home_new_worktree_prompt.snap
---
source: code/tui/src/app/fullscreen/home_tests.rs
expression: "text(&render(&app, 80, 24))"
---
  .                                                                [Dashboard]  
                                                                                
  ╭─────┌── Project worktrees › New worktree ──────────────────────[✗]─┐─────╮  
  │     │                                                              │     │  
  │    ▄│  Create worktree                                             │     │  
  │  ▗█▛│                                                              │     │  
  │  ▝▜█│  ╭─────────────────────────────────────────────────────────╮ │     │  
  │    ▝│  │ Worktree name                                           │ │     │  
  │     │  ╰─────────────────────────────────────────────────────────╯ │     │  
  │     │  Create at HEAD. No session starts.                          │     │  
  │     │                                                              │     │  
  │     │                                                              │     │  
  │     │                                                              │     │  
  │     │                                                              │     │  
  ╰─────│                                                              │─────╯  
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
  ──────│  Enter to create  ·  Esc to back                             │──────  
  > Buil└──────────────────────────────────────────────────────────────┘        
  ─────────────────────────────────────────────────────────── Automatic model
